chore: update package.json

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ PORT=3000
 
 # 로그 레벨 (debug, info, warn, error)
 LOG_LEVEL=debug
+
+# JWT 설정
+JWT_SECRET=your-super-secret-key-change-this-in-production
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
