feat: apply prisma seed

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 
 # 데이터베이스 연결 URL
 DATABASE_URL="mysql://user:password@localhost:3306/concert_booking"
+DATABASE_SCHEMA="concert_booking"
+DATABASE_HOST="localhost"
+DATABASE_USER="user"
+DATABASE_PASSWORD="password"
 
 # 애플리케이션 환경
 NODE_ENV=development
